--- a/src/app/supplier/supplier-list/supplier-list.component.html
+++ b/src/app/supplier/supplier-list/supplier-list.component.html
@@ -15,13 +15,15 @@
             <header class="major">
                 <h5 class="customTitle">{{ pageTitle }}</h5>
             </header>
-            <a class="customFloatedButton" [routerLink]="['/suppliers-module/suppliers', { outlets: { edit: ['newSupplier'] } }]"
+            <a class="customFloatedButton"
+                [routerLink]="['/suppliers-module/suppliers', { outlets: { edit: ['newSupplier'] } }]"
                 class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius> + Nuevo Proveedor</a>
         </div>
         <div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
             <div class="col-md-12 col-lg-12 col-sm-12 pl-5 pr-5 pt-4 pb-2 mt-2 text-center">
                 <div class="row">
-                    <mdb-checkbox [(ngModel)]="showInactiveSuppliers" name="inactiveSuppliers">{{ checkboxText }}</mdb-checkbox>
+                    <mdb-checkbox [(ngModel)]="showInactiveSuppliers" name="inactiveSuppliers">{{ checkboxText }}
+                    </mdb-checkbox>
                     <br>
                     <br>
                     <table class="table table-bordered table-hover customTable" mdbTable #tableEl="mdbTable">
@@ -36,26 +38,33 @@
                         </thead>
                         <tbody class="table-wrapper" *ngIf='filteredSuppliers && filteredSuppliers.length'>
                             <tr *ngFor='let supplier of filteredSuppliers; let i = index'>
-                                <td *ngIf='(supplier.active === true || showInactiveSuppliers === true) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ supplier.name
+                                <td
+                                    *ngIf='(supplier.active === true || showInactiveSuppliers === true) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ supplier.name
                                     }}</td>
-                                <td *ngIf='(supplier.active === true || showInactiveSuppliers === true) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{
+                                <td
+                                    *ngIf='(supplier.active === true || showInactiveSuppliers === true) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{
                                     supplier.email }}</td>
-                                <td *ngIf='(supplier.active === true || showInactiveSuppliers === true) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ supplier.tel
+                                <td
+                                    *ngIf='(supplier.active === true || showInactiveSuppliers === true) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ supplier.tel
                                     }}</td>
-                                <td *ngIf='(supplier.active === true || showInactiveSuppliers === true) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{
+                                <td
+                                    *ngIf='(supplier.active === true || showInactiveSuppliers === true) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{
                                     supplier.addressStreet || ' '}} {{ supplier.addressNumber || ' '}} {{
                                     supplier.addressDpto || ' ' }}</td>
-                                <td class="align-middle" *ngIf='(supplier.active === true || showInactiveSuppliers === true) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
+                                <td class="align-middle"
+                                    *ngIf='(supplier.active === true || showInactiveSuppliers === true) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
                                     <a [routerLink]="['/suppliers-module/suppliers', { outlets: { edit: ['editSupplier', supplier._id] } }]"
                                         class="btn btn-yellow btn-sm customButtonText">Editar</a>
-                                    <a (click)="showModalDelete(deleteTemplate, supplier._id)" class="btn btn-red btn-sm">Eliminar</a>
+                                    <a (click)="showModalDelete(deleteTemplate, supplier._id)"
+                                        class="btn btn-red btn-sm">Eliminar</a>
                                 </td>
                             </tr>
                         </tbody>
                         <tfoot class="grey lighten-5 w-100">
                             <tr>
                                 <td colspan="5">
-                                <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredSuppliers"></mdb-table-pagination>
+                                    <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredSuppliers">
+                                    </mdb-table-pagination>
                                 </td>
                             </tr>
                         </tfoot>
