--- a/src/app/order/order-new/order-new.component.html
+++ b/src/app/order/order-new/order-new.component.html
@@ -77,7 +77,7 @@ overflow: auto; overflow-x: hidden;">
     <div class="row col-12 pr-0 pl-0 categoriesAndProductsContainer">
       <div class="col-3 categoriesContainer customScrollBar pr-0 pl-0 pb-0 pt-0 mr-0 ml-0 mt-0 mb-0">
         <div class="d-flex flex-wrap align-items-center justify-content-center categoryButtonContainer" *ngFor="let category of categories">
-          <a (click)="getProductsByCategory(category._id); applyClassCategory(category._id)" [ngClass]="{'activeItem': activeCategory == category._id}"  class="d-flex align-items-center justify-content-center btn btn-primary btn-md waves-light categoryButton" mdbRippleRadius><span>{{category.name}}</span></a>
+          <a (click)="getProductsAvailablesByCategory(category._id); applyClassCategory(category._id)" [ngClass]="{'activeItem': activeCategory == category._id}"  class="d-flex align-items-center justify-content-center btn btn-primary btn-md waves-light categoryButton" mdbRippleRadius><span>{{category.name}}</span></a>
         </div>
       </div>
       <div *ngIf="products && products.length > 0" class="col-9 d-flex flex-wrap col-9 productsContainer customScrollBar pr-0 pl-0 pb-0 pt-0 mr-0 ml-0 mt-0 mb-0">
