--- a/src/app/order/order-new/order-new.component.html
+++ b/src/app/order/order-new/order-new.component.html
@@ -77,7 +77,7 @@ overflow: auto; overflow-x: hidden;">
     <div class="row col-12 pr-0 pl-0 categoriesAndProductsContainer">
       <div class="col-3 categoriesContainer customScrollBar pr-0 pl-0 pb-0 pt-0 mr-0 ml-0 mt-0 mb-0">
         <div class="d-flex flex-wrap align-items-center justify-content-center categoryButtonContainer" *ngFor="let category of categories">
-          <a (click)="getProductsAvailablesByCategory(category._id); applyClassCategory(category._id)" [ngClass]="{'activeItem': activeCategory == category._id}"  class="d-flex align-items-center justify-content-center btn btn-primary btn-md waves-light categoryButton" mdbRippleRadius><span>{{category.name}}</span></a>
+          <a (click)="getProductsAvailablesByCategory(category._id); applyClassCategory(category._id); categorySelected = true" [ngClass]="{'activeItem': activeCategory == category._id}"  class="d-flex align-items-center justify-content-center btn btn-primary btn-md waves-light categoryButton" mdbRippleRadius><span>{{category.name}}</span></a>
         </div>
       </div>
       <div *ngIf="products && products.length > 0" class="col-9 d-flex flex-wrap col-9 productsContainer customScrollBar pr-0 pl-0 pb-0 pt-0 mr-0 ml-0 mt-0 mb-0">
@@ -85,9 +85,15 @@ overflow: auto; overflow-x: hidden;">
           <a (click)="validateSizesAndOptions(product, 1)" class="d-flex align-items-center justify-content-center btn btn-primary btn-md waves-light productButton" mdbRippleRadius><span>{{product.name}}</span></a>
         </div>
       </div>
-      <div *ngIf="products.length == 0" class="col-9 d-flex justify-content-center col-9 productsContainer customScrollBar pr-0 pl-0 pb-0 pt-5 mr-0 ml-0 mt-0 mb-0">
-          <h3>{{ noProductsText }}</h3>
+      <!-- <div *ngIf="products && products.length = 0" class="col-9 d-flex flex-wrap col-9 productsContainer customScrollBar pr-0 pl-0 pb-0 pt-0 mr-0 ml-0 mt-0 mb-0">
+        <span>No hay productos disponibles para la categoria seleccionada.</span>
+      </div> -->
+      <div *ngIf="products.length == 0 && categorySelected == false" class="col-9 d-flex justify-content-center col-9 productsContainer customScrollBar pr-0 pl-0 pb-0 pt-5 mr-0 ml-0 mt-0 mb-0">
+          <h3>{{ noCategoriesText }}</h3>
       </div>
+      <div *ngIf="products.length == 0 && categorySelected == true" class="col-9 d-flex justify-content-center col-9 productsContainer customScrollBar pr-0 pl-0 pb-0 pt-5 mr-0 ml-0 mt-0 mb-0">
+        <h3>{{ noProductsAvailablesText }}</h3>        
+    </div>
     </div>
   </div>
   <div class="col-md-4 col-lg-4 col-xs-4 col-sm-4 pl-0 pr-0">
