--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,28 +3,28 @@
 	<div class="containter-fluid customMB">
 	<mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navBarColor pr-0" [containerInside]="false">
 		<logo>
-			<a class="logo navbar-brand pl-4" href="#"><strong>BonApp</strong></a>
+			<a class="logo navbar-brand pl-4" href="#"><img src="assets/img/logo-blanco.png" height="40px" width="auto"></a>
 		</logo>
 		<links>
 			<ul class="navbar-nav mr-auto">
 				<!--<a [routerLink]="['/order']" class="btn btn-primary">Nuevo Pedido</a>-->
 				<li class="nav-item waves-light customLi" [routerLinkActive]="['customActive']" mdbTooltip="Pedidos" placement="bottom" mdbRippleRadius>
-					<a [routerLink]="['orders']" class="nav-link"><i class='fa fa-coffee fa-2x'></i><span class="sr-only">(current)</span></a>
+					<a [routerLink]="['orders']" class="nav-link"><img src="assets/img/taza.png" height="50px" width="auto"><span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item waves-light customLi" [routerLinkActive]="['customActive']" mdbTooltip="Ventas" placement="bottom" mdbRippleRadius>
-					<a [routerLink]="['sales']" class="nav-link"><i class='fa fa-dollar-sign fa-2x'></i></a>
+					<a [routerLink]="['sales']" class="nav-link"><img src="assets/img/moneda.png" height="50px" width="auto"></a>
 				</li>
 				<li class="nav-item waves-light customLi"  [routerLinkActive]="['customActive']" mdbTooltip="Restaurant" placement="bottom" mdbRippleRadius>
-					<a [routerLink]="['restaurant']" class="nav-link"><i class='fa fa-utensils fa-2x'></i></a>
+					<a [routerLink]="['restaurant']" class="nav-link"><img src="assets/img/cubiertos.png" height="50px" width="auto"></a>
 				</li>
 				<li class="nav-item waves-light customLi" [routerLinkActive]="['customActive']" mdbTooltip="Clientes" placement="bottom" mdbRippleRadius>
-					<a [routerLink]="['clients-module']" class="nav-link"><i class='fa fa-user-circle fa-2x'></i></a>
+					<a [routerLink]="['clients-module']" class="nav-link"><img src="assets/img/perfilredondo.png" height="50px" width="auto"></a>
 				</li>
 				<li class="nav-item waves-light customLi" [routerLinkActive]="['customActive']" mdbTooltip="Proveedores" placement="bottom" mdbRippleRadius>
-					<a [routerLink]="['suppliers-module']" class="nav-link"><i class='fa fa-truck fa-2x'></i></a>
+					<a [routerLink]="['suppliers-module']" class="nav-link"><img src="assets/img/camion.png" height="50px" width="auto"></a>
 				</li>
 				<li class="nav-item waves-light customLi" [routerLinkActive]="['customActive']" mdbTooltip="Configuracion" placement="bottom" mdbRippleRadius>
-					<a [routerLink]="['settings']" class="nav-link"><i class='fa fa-cog fa-2x'></i></a>
+					<a [routerLink]="['settings']" class="nav-link"><img src="assets/img/engranaje.png" height="50px" width="auto"></a>
 				</li>
 			</ul>
 			<ul class="navbar-nav nav-flex-icons">
@@ -36,7 +36,7 @@
 					<h5 class="mb-0">{{ myDate | date:'HH:mm:ss'}}</h5>
 				</li>
 				<li class="nav-item dropdown btn-group pr-2" dropdown>
-					<a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light" mdbRippleRadius><i class="fa fa-user fa-2x"></i>
+					<a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light" mdbRippleRadius><img src="assets/img/perfil2.png" height="50px" width="auto">
 						<b>User</b><span class="caret"></span></a>
 				
 					<div *dropdownMenu class="dropdown-menu dropdown-primary dropdown" role="menu">
