error estilo mdb hover navbar + fixeo tamano de las imagenes en el new

--- a/src/app/category/category-new/category-new.component.html
+++ b/src/app/category/category-new/category-new.component.html
@@ -80,7 +80,7 @@
     </div>
 
     <div class="col-md-6">
-      <img [src]="newCategoryPictureData" onerror="this.src='../../../assets/img/no-image.png'" />
+      <img [src]="newCategoryPictureData" onerror="this.src='../../../assets/img/no-image.png'" style="width: 300px; height: 316px;"/>
     </div>
   </div>
 </div>
