--- a/src/app/product/product-new/product-new.component.html
+++ b/src/app/product/product-new/product-new.component.html
@@ -99,7 +99,7 @@
           </div>       
         </div> 
         <div class="col-md-6 pr-0 pl-0">
-            <img [src]="newProductPictureData" onerror="this.src='../../../assets/img/no-image.png'"/>               
+            <img [src]="newProductPictureData" onerror="this.src='../../../assets/img/no-image.png'" style="width: 300px; height: 316px;"/>               
         </div>  
       </div>
       <div class="row col-md-12 col-lg-12 col-sm-12 mr-0">
