--- a/src/styles.scss
+++ b/src/styles.scss
@@ -409,3 +409,7 @@ font-family: 'Spinnaker', sans-serif;
 background-color:#718239 !important;
 border-radius:20px;
 }
+
+.navbar-collapse {
+    height: 0px!important;
+}
