--- a/src/app/category/category-list/category.component.html
+++ b/src/app/category/category-list/category.component.html
@@ -40,6 +40,7 @@
                 <tr>
                     <th>Nombre</th>
                     <th>Menu</th>
+                    <th class="customShortTh">Disponible</th>
                     <th>Acciones</th>
                 </tr>
             </thead>
@@ -47,6 +48,7 @@
                 <tr *ngFor = 'let category of filteredCategories; let i = index' >
                     <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{category.name}}</td>
                     <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ category.menu.name }}</td>
+                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle customShortTh">{{ category.availableDescription }}</td>
                     <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle">
                         <a [routerLink]="['edit', category._id]" class="btn btn-yellow btn-sm customButtonText">Editar</a>
                         <a (click) = "showModalDelete(deleteTemplate, noDelete, category._id)" class="btn btn-red btn-sm">Eliminar</a>
@@ -55,7 +57,7 @@
             </tbody>
             <tfoot class="grey lighten-5 w-100">
                 <tr>
-                    <td colspan="3">
+                    <td colspan="4">
                     <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredCategories"></mdb-table-pagination>
                     </td>
                 </tr>
