--- a/src/app/category/category-new/category-new.component.html
+++ b/src/app/category/category-new/category-new.component.html
@@ -32,8 +32,7 @@
 
         <div class="form-group">
           <label>Nombre Categoría:</label>
-          <input #categoryName="ngModel" required type="text" class="form-control"
-            [class.is-invalid]="categoryName.invalid && (categoryName.dirty || categoryName.touched)"
+          <input #categoryName="ngModel" required type="text" class="form-control" [class.is-invalid]="categoryName.invalid && (categoryName.dirty || categoryName.touched)"
             name="categoryName" id="categoryName" [(ngModel)]="newCategory.name">
         </div>
 
@@ -45,9 +44,8 @@
           <label>Menu:</label>
           <div class="select-wrapper">
             <select #categoryMenu="ngModel" required type="text" class="form-control browser-default"
-              [class.is-invalid]="hasMenu && menuTouched" name="categoryMenu"
-              (blur)="validateCategory(categoryMenu.value)" (change)="validateCategory(categoryMenu.value)"
-              id="categoryMenu" [(ngModel)]="menuSelectedId">
+              [class.is-invalid]="hasMenu && menuTouched" name="categoryMenu" (blur)="validateCategory(categoryMenu.value)"
+              (change)="validateCategory(categoryMenu.value)" id="categoryMenu" [(ngModel)]="menuSelectedId">
               <option value="default" default>Seleccione la carta...</option>
               <option [value]="menu._id" *ngFor='let menu of menus'>{{menu.name}}</option>
             </select>
@@ -57,6 +55,15 @@
         <div *ngIf="hasMenu && menuTouched" class="alert alert-danger">
           El Menu de la Categoría es requerido.
         </div>
+     
+        <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+          <div class="row pl-2">
+            <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+              <mdb-checkbox name="categoryAvailable" [(ngModel)]="newCategory.available"> {{ checkboxAvailableText }}
+              </mdb-checkbox>
+            </div>
+          </div>
+        </div>
 
         <app-file-input (validator)="onNotified($event)" [type]="'img'" [subtype]="'category'"></app-file-input>
         <div *ngIf="validPicture == '' && pictureTouched == true" class="alert alert-danger">
@@ -65,8 +72,8 @@
 
         <div class="12u$">
           <ul class="actions" align="center">
-            <li><input [disabled]="form.invalid || hasMenu || validPicture === ''" type="submit" value="Guardar"
-                class="special" (click)="saveCategory()" /></li>
+            <li><input [disabled]="form.invalid || hasMenu || validPicture === ''" type="submit" value="Guardar" class="special"
+                (click)="saveCategory()" /></li>
             <li><input type="button" value="Cancelar" (click)="showModalCancel(cancelTemplate)" /></li>
           </ul>
         </div>
