--- a/src/app/menu/menu-new/menu-new.component.html
+++ b/src/app/menu/menu-new/menu-new.component.html
@@ -27,6 +27,15 @@
         <div *ngIf="menuName.invalid && (menuName.dirty || menuName.touched)" class="alert alert-danger">
           El nombre de la carta es requerido.
         </div>
+        
+        <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-3 pb-3 pr-3 pl-3">
+          <div class="row pl-2">
+            <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+              <mdb-checkbox name="menuAvailable" [(ngModel)]="newMenu.available"> {{ checkboxAvailableText }}
+              </mdb-checkbox>
+            </div>
+          </div>
+        </div>
 
         <app-file-input (validator)="onNotified($event)" [type]="'img'" [subtype]="'menu'"></app-file-input>
         <div *ngIf="validPicture == '' && pictureTouched == true" class="alert alert-danger">
