--- a/src/app/client/client-edit/client-edit.component.html
+++ b/src/app/client/client-edit/client-edit.component.html
@@ -71,6 +71,16 @@
         </div>
       </div>
     </div>
+
+    <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm" *ngIf='client.enabledTransactions'>
+      <div class="row pl-2">
+        <div class="col-md-5 col-lg-5 col-sm-5 pl-0">
+          <input #clientAddressDpto="ngModel" type="number" min='0' step='100' class="form-control" name="clientLimitCtaCte" id="clientLimitCtaCte"
+            [(ngModel)]="client.limitCtaCte" placeholder="Limite Cta Cte.">
+        </div>
+      </div>
+    </div>
+
     <div class="col-12">
       <div class="col-7 offset-5">
         <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
