--- a/src/app/client/client-list/client-list.component.html
+++ b/src/app/client/client-list/client-list.component.html
@@ -37,6 +37,7 @@
                                 <th>Teléfono</th>
                                 <th>Dirección</th>
                                 <th>Saldo</th>
+                                <th>Limite Cta Cte</th>
                                 <th>Acciones</th>
                             </tr>
                         </thead>
@@ -46,6 +47,8 @@
                                     <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ client.tel }}</td>
                                     <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ client.addressStreet || ' '}} {{ client.addressNumber || ' '}} {{ client.addressDpto || ' ' }}</td>
                                     <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ client.balance | currency:'USD':code:'2.2-2'}}</td>
+                                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && !client.enabledTransactions'> - </td>
+                                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && client.enabledTransactions'>{{ client.limitCtaCte | currency:'USD':code:'2.2-2'}}</td>
                                     <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle">
                                         <a [routerLink]="['/clients-module/clients', { outlets: { edit: ['editClient', client._id] } }]" class="btn btn-yellow btn-sm customButtonText">Editar</a>
                                         <a (click) = "showModalDelete(deleteTemplate, client._id)" class="btn btn-red btn-sm">Eliminar</a>
@@ -54,7 +57,7 @@
                         </tbody>
                         <tfoot class="grey lighten-5 w-100">
                             <tr>
-                                <td colspan="5">
+                                <td colspan="6">
                                 <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredClients"></mdb-table-pagination>
                                 </td>
                             </tr>
