--- a/src/app/restaurant/restaurant.component.html
+++ b/src/app/restaurant/restaurant.component.html
@@ -18,6 +18,16 @@
     [routerLink]="['product']" routerLinkActive="active">Productos
   </a>
   </li>
+  <li class="nav-item">
+    <a class="waves-effect"
+    [routerLink]="['dailyMenu']" routerLinkActive="active">Menu del Dia
+  </a>
+  </li>
+  <li class="nav-item">
+    <a class="waves-effect"
+    [routerLink]="['stockControl']" routerLinkActive="active">Control de Stock
+  </a>
+  </li>
  </ul>
  <!-- Tab panels -->
  <div class="tab-content customContentCard">
